--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
 
     "require-dev": {
         "doctrine/dbal": ">=2.2",
+        "satooshi/php-coveralls": "dev-master",
         "php": ">=5.3.6"
     },
 
