--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,18 @@
 language: php
 
 php:
-  - 5.3
-  - 5.4
   - 5.5
+  - 5.4
+  - 5.3
+  - hhvm
+
+branches:
+  except:
+    - /^draft-.*/
+
+matrix:
+  allow_failures:
+    - php: hhvm
 
 before_script:
   - composer self-update
